AP-18566: Code Cleanup for Loaders
AP-18566 (Code Cleanup for Loaders)